# usc.kiit_shopvision

./: .env.production  .gitattributes  .gitignore  AUTHENTICATION.md  AUTHENTICATION_SYSTEM.md  HACKATHON_GUIDE.md  LANGUAGE_FEATURE.md  README.md  SUPABASE_SETUP_GUIDE.md  TESTING_GUIDE.md  api.py  api_log.txt  classifier.keras  eslint.config.js  fast_train.py  fruit_api.py  imagenet_api.py  index.html  main.py  netlify.toml  package-lock.json  package.json  predict_api.py  pyproject.toml  quick_train.py  requirements.txt  simple_api.py  smart_api.py  supabase-schema.sql  tailwind.config.ts  template_api.py  test-supabase-connection.html  train_fruit_detection.py  train_fruit_model.py  training (1).ipynb  training.ipynb  vite.config.ts
docs/: AUTHENTICATION.md  training.md
fruit_dataset/dataset/Fruits-360_/: main.py  pyproject.toml  training.ipynb
ml-api/: README.md  app.py  requirements.txt
ml-model/: README_old.md  SETUP_SUMMARY.md  TRAINING_GUIDE.md  advanced_train.py  download_dataset.py  ensemble_predict.py  predict_api.py  quick_start.py  requirements.txt  requirements_advanced.txt  train_fruit_model.py
ml/artifacts/: class_names.txt  fruit_classes.json
ml/scripts/: train_fruit_model.py
scripts/: check-supabase.mjs
src/: App.tsx  index.css
src/components/: BillingScanner.tsx  BillsTable.tsx  FruitCard.tsx  Header.tsx  LanguageToggle.tsx
src/contexts/: AuthContext.old.tsx  AuthContext.tsx  LanguageContext.tsx  LanguageContextDefinition.tsx
src/hooks/: useLanguage.ts
src/lib/: authCredentials.ts  data.ts  supabase.ts
supabase/: schema.sql
(+13 files in other folders)
