[project]
name = "shopvision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "gunicorn>=21.2.0 ; sys_platform != 'win32'",
    "kaggle>=1.6.0",
    "matplotlib>=3.8.0",
    "numpy>=1.24.0,<2.0.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "scikit-learn>=1.3.0",
    "tensorflow>=2.15.0,<2.18.0",
]
